syntax = "proto3";

service PromotionService {
    rpc Sync (IKafkaReq) returns (IKafkaRes) {}
    rpc ValidatePromotion (IValidatePromotionReq) returns (IValidatePromotionRes) {}
}

message IKafkaReq {
    required string set = 1;
    optional IAerospike as = 2;
    optional ICms cms = 3;
    optional ISdm sdm = 4;
    required int32 count = 5;
}

message IAerospike {
    required bool create = 1;
    required bool update = 2;
    required string argv = 3;
}

message ICms {
    required bool create = 1;
    required bool update = 2;
    required string argv = 3;
}

message ISdm {
    required bool create = 1;
    required bool update = 2;
    required string argv = 3;
}

message IKafkaRes {
    required string data = 1;
}

message IValidatePromotionReq {
    required int32 couponCode = 1;
}

message IValidatePromotionRes {
    required bool isValid = 1;
}